cmake_minimum_required (VERSION 3.9)
project (mystl)
set(MYSTL_VERSION_MAJOR 1)
set(MYSTL_VERSION_MINOR 0)

#list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/")
#include(CheckFunctionExists.cmake)
#check_function_exists(log HAVE_LOG)
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -g")
include(CTest)
enable_testing()
configure_file("${PROJECT_SOURCE_DIR}/src/mystl_config.h.in" "${PROJECT_BINARY_DIR}/mystl_config.h")

add_subdirectory(demo)
install (FILES "${PROJECT_BINARY_DIR}/mystl_config.h" DESTINATION include)
install (FILES "${PROJECT_SOURCE_DIR}/src/base/*" DESTINATION include/base)
install (FILES "${PROJECT_SOURCE_DIR}/src/datastruct/*" DESTINATION include/datastruct)
#add_test(arr1 ${PROJECT_SOURCE_DIR}/demo/arrdemo)
#set_tests_properties(arr1 PROPERTIES pass_regular_expression "xxx")