include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/src/datastruct/")

add_executable(arrdemo arrdemo.cpp)
add_executable(listdemo listdemo.cpp)
add_executable(stackdemo stackdemo.cpp)
add_executable(queuedemo queuedemo.cpp)
add_executable(heapdemo heapdemo.cpp)
add_executable(hashdemo hashdemo.cpp)

install(TARGETS arrdemo DESTINATION bin)
install(TARGETS listdemo DESTINATION bin)
install(TARGETS stackdemo DESTINATION bin)
install(TARGETS queuedemo DESTINATION bin)
install(TARGETS heapdemo DESTINATION bin)
install(TARGETS hashdemo DESTINATION bin)

add_test(arr1 arrdemo)
add_test(list1 listdemo)
add_test(stack1 stackdemo)
add_test(queue1 queuedemo)
add_test(heap1 heapdemo)
add_test(hash1 hashdemo)
set_tests_properties(arr1 PROPERTIES pass_regular_expression "xxx")